fix dark mode jobs list

--- a/client-vue/src/assets/_darkmode.scss
+++ b/client-vue/src/assets/_darkmode.scss
@@ -83,7 +83,7 @@
     }
 
     #js-status,
-    .jobs-status {
+    #jobs-status {
         color: #eee;
         background-color: #333;
         border-color: #111;
